<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="3dp"
        android:id="@+id/map_frame">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:context=".fragments.map" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/map_readings"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:layout_below="@+id/map_frame"
        android:paddingTop="10dp" >

        <include
            layout="@layout/fragment_map_header" />

        <include
            layout="@layout/fragment_map_noreadings" />

        <include
            layout="@layout/fragment_map_readings" />

        <include
            layout="@layout/fragment_map_detailed_readings" />

    </LinearLayout>
</RelativeLayout>